# msal-tech

./: .buildinfo  .gitignore  .nojekyll  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  README.md  about.html  annotation.html  assessment.html  authors.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  requirements_colab.txt  robots.txt  search.html  search.json  searchindex.js  sitemap.xml  subjects.html  tmux.conf
.binder/: requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_behaviour.md  bug_report_code.md  bug_report_code_sample.md  bug_report_content.md  feature_request.md  feature_request_behaviour.md  feature_request_content.md  issues_finish_work.md  issues_start_work.md
_sources/: genindex.md  index.ipynb  index.md
_sources/algorithmics/: about.ipynb  annotation.ipynb  annotation.md  assessment.ipynb  content.ipynb  credit.ipynb  exam.ipynb  exam.md  index.ipynb
_sources/attestation/: annotation.ipynb  exam.ipynb  index.ipynb  index.md
_sources/business_processes/: about.ipynb  annotation.ipynb  annotation.md  assessment.ipynb  assessment.md  credit.ipynb  exam.ipynb  index.ipynb  index.md
_sources/development_methodologies/: about.ipynb  annotation.ipynb  annotation.md  assessment.ipynb  assessment.md  credit.ipynb  credit.md  index.ipynb
_sources/info/: bibliography.ipynb  index.ipynb  index.md  typography.ipynb
_sources/legaltech/: about.ipynb  annotation.ipynb  assessment.ipynb  assessment.md  credit.ipynb  credit.md  index.ipynb  index.md
_sources/practicum/: annotation.ipynb  annotation.md  index.ipynb
_sources/project_management/: about.ipynb  about.md  annotation.ipynb  annotation.md  assessment.ipynb  credit.ipynb  credit.md  index.ipynb  index.md
_sources/traineeship/: annotation.ipynb  annotation.md  credit.ipynb  credit.md  index.ipynb  index.md
_static/scripts/: scripts.js
_static/styles/: index.css  styles.css
algorithmics/: about.html  annotation.html  assessment.html  content.html  credit.html  exam.html  index.html
algorithmics/homework/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
algorithmics/lecture/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  Untitled.html  index.html
algorithmics/lecture-01/: algorithmics-lecture-01-slides.html  algorithmics-lecture-01.html  index.html  lecture-01.html
algorithmics/seminar/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
algorithmics/slides/: index.html
algorithmics/topic-01/: index.html
algorithmics/topic-02/: index.html
algorithmics/topic-03/: index.html
algorithmics/topic-04/: index.html
algorithmics/topic-05/: index.html
algorithmics/topic-06/: index.html
attestation/: annotation.html  exam.html  index.html
bibliography/: additional.html  basic.html  electronic.html
book/: _config.yml  _toc.yml  index.md
book/algorithmics/: annotation.md  assessment.md  content.md  credit.md  index.md
book/attestation/: annotation.md  exam.md
book/business_processes/: about.md  credit.md  exam.md  index.md
book/development_methodologies/: about.md  credit.md  index.md
book/info/: bibliography.md  index.md  typography.md
book/legaltech/: about.md  annotation.md  assessment.md
book/practicum/: index.md
book/project_management/: assessment.md  credit.md
business-process-modeling/: annotation.html  assessment.html  credit.html  exam.html  index.html
business-process-modeling/topic-01/: index.html
business-process-modeling/topic-02/: index.html
business-process-modeling/topic-03/: index.html
business-process-modeling/topic-04/: index.html
business_processes/: about.html  annotation.html  assessment.html  credit.html  exam.html  index.html
business_processes/homework/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
business_processes/lecture/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
business_processes/seminar/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
business_processes/slides/: index.html
development_methodologies/: about.html  annotation.html  assessment.html  credit.html  index.html
development_methodologies/homework/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
development_methodologies/lecture/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
development_methodologies/seminar/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
development_methodologies/slides/: index.html
info/: bibliography.html  index.html  typography.html
it-project-management/: annotation.html  assessment.html  credit.html  index.html
it-project-management/topic-01/: index.html
it-project-management/topic-02/: index.html
it-project-management/topic-03/: index.html
it-project-management/topic-04/: index.html
it-project-management/topic-05/: index.html
legaltech/: about.html  annotation.html  assessment.html  credit.html  index.html
legaltech/homework/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  index.html
legaltech/lecture/: 01.html  (+10 more)
practicum/: annotation.html  index.html
project/: annotation.html  index.html  report-requirements.html  report-structure.html  theme-options.html
project_management/: about.html  annotation.html  assessment.html  credit.html  index.html
software-development-methodology/: annotation.html  assessment.html  credit.html  index.html
src/: 404.md  404.qmd  _quarto.yml  _variables.yml  about.qmd  annotation.qmd  assessment.qmd  authors.qmd  index.qmd  subjects.qmd
tests/: venv_test.py
traineeship/: annotation.html  credit.html  index.html
(+672 files in other folders)
