[project]
name = "msal-tech"
version = "2025.03.10"
description = "Материалы учебного курса: Автоматизация юридических процессов"
authors = [
    {name = "askras",email = "askrasnikov@gmail.com"}
]
license = {text = "CC BY-NC 4.0"}
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "jupyterlab-quarto (>=0.3.5,<0.4.0)",
]


[tool.poetry]


[tool.poetry.group.dev.dependencies]
jupyterlab = ">=4.3.5, <5.0.0"

# A plugin for poetry that allows you to execute scripts defined
# in your pyproject.toml
poetry-exec-plugin = {git = "https://github.com/askras/poetry-exec-plugin.git"}

pytest = "^8.3.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


#==============================================================================
# A plugin for poetry that allows you to execute scripts
# https://pypi.org/project/poetry-exec-plugin/
#==============================================================================
[tool.poetry-exec-plugin.commands]

jupyter = """
echo 'Start Jupyter Lab without token'
export JUPYTERLAB_SETTINGS_DIR=./.jupyterlab_config/user-settings
export JUPYTERLAB_WORKSPACES_DIR=./.jupyterlab_config/workspaces
python -m jupyter lab \
    --allow-root \
    --NotebookApp.token='' \
    --NotebookApp.password='' \
        --no-browser
"""
