[project]
name = "msal-tech"
version = "2025.10.14"
description = "Материалы учебного курса: Автоматизация юридических процессов"
authors = [
    {name = "askras",email = "askrasnikov@gmail.com"}
]
license = {text = "CC BY-NC 4.0"}
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
]


[tool.poetry.group.dev.dependencies]
jupyterlab-quarto = ">=0.3.5,<0.4.0"
flowchart-magic = ">=0.1.6,<0.2.0"
jupyterlab = ">=4.4.9, <5.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


#==============================================================================
# A plugin for poetry that allows you to execute scripts
# https://pypi.org/project/poetry-exec-plugin/
#==============================================================================
[tool.poetry-exec-plugin.commands]

jupyter = """
echo 'Start Jupyter Lab without token'
python -m jupyter lab \
    --allow-root \
    --NotebookApp.token='' \
    --NotebookApp.password='' \
        --no-browser
"""

freeze = """
poetry export \
    --format requirements.txt \
    --output requirements.txt \
    --all-groups \
    --without-hashes
"""

quarto = """
# cd ./src
quarto add parmsam/quarto-quiz
quarto add coatless-quarto/pyodide
"""
